--- a/FIPLY/Dokumente/FIPLY Latex/irsiegler_FreePremium.tex
+++ b/FIPLY/Dokumente/FIPLY Latex/irsiegler_FreePremium.tex
@@ -4,26 +4,26 @@
 %\date{25. Februar 2016}
 
 \begin{document}
-\subsubsection{Gratis/Bezahlte Versionen}
+\subsection{Gratis/Bezahlte Versionen}
 
 
-\paragraph{Beschreibung}\ \\
+\subsubsection{Beschreibung}\ \\
 Es ist eine Basis (Gratis) Version gratis erhältlich, diese enthält nicht den gesamten Funktionsumhang.
 Um alle Funktionen freizuschalten ist eine Gebühr zu zahlen.
 
-\paragraph{Vorteile}\ \\
+\subsubsection{Vorteile}\ \\
 \begin{itemize}
 \item Der Kunde kann sich bevor er Geld investiert einen ersten Eindruck verschaffen und muss die App nicht "blind" kaufen.
 \item Da es keine Einstiegs-Barriere gibt, erreicht die App mehr User und wird sich somit schneller verbreiten.
 \end{itemize}
 
-\paragraph{Nachteile}\ \\
+\subsubsection{Nachteile}\ \\
 \begin{itemize}
 \item Der Hauptteil aller Applikationen die dieses Modell wählen, sind während ihrer Lebenszeit nicht profitabel. Nur ein sehr kleiner Teil kann sich durchsetzen.
 \item Es gibt im Google-Play-Store etwa vier mal mehr gratis Apps, als bezahlte Apps und somit ist es schwerer sich mit einer App am Markt durchzusetzen.
 \end{itemize}
 
-\paragraph{Implementierung}\ \\
+\subsubsection{Implementierung}\ \\
 
 Android Studio bietet eine Möglichkeit eine bezahlte und eine gratis Version in einem Projekt zu entwickeln.
 Dies macht es trivial dieses Konzept in die Realität umzusetzen.
