--- a/FIPLY/Dokumente/FIPLY Latex/irsiegler_PaidVersion.tex
+++ b/FIPLY/Dokumente/FIPLY Latex/irsiegler_PaidVersion.tex
@@ -5,14 +5,14 @@
 
 \begin{document}
 	
-\subsubsection{Fixpreis}
+\subsection{Fixpreis}
 
-\paragraph{Beschreibung}\ \\
+\subsubsection{Beschreibung}\ \\
 Die App wird mit einem fixen Preis veröffentlicht bzw. verkauft.
 Der Kunde bezahlt ein mal und erhält unser Produkt, mit seinem gesamten Funktionsumfang, sofort.
 Alle zukünftigen Updates sind im Preisumfang enthalten.
 
-\paragraph{Vorteile}\ \\
+\subsubsection{Vorteile}\ \\
 \begin{itemize}
 
 \item Ein klarer Vorteil bei einem fixen Preis ist, dass es die einfachste Methode der Vermarktung ist.
@@ -25,18 +25,18 @@ und kümmert sich um jegliche Details, wie z.B. Steuern (Mehrwertsteuer, etc.)
 
 \end{itemize}
 
-\paragraph{Nachteile}\ \\
+\subsubsection{Nachteile}\ \\
 \begin{itemize}
 \item Ein Nachteil dieser Vermarktungsmethode ist, dass der Kunde in ein Produkt investiert, welches er vorher nie ausprobieren könnte.
 Dies könnte möglicherweise abschreckend wirken.
 \end{itemize}
 
-\paragraph{Preis}\ \\
-Der Preis unseres Produkt wird anfänglich bei weniger als einem Euro liegen.
+\subsubsection{Preis}\ \\
+Der Preis unseres Produktes wird anfänglich bei weniger als einem Euro liegen.
 Bei einer stetig wachsenden Benutzeranzahl wird der Preis auf einen bis zwei Euro erhöht werden.
 Dies ist jedoch das Maximum, da ein zu hoher Preis zu niedrigeren Verkaufszahlen führt.
 
-\paragraph{Google-Play-Store}\ \\
+\subsubsection{Google-Play-Store}\ \\
 Um eine App in den Google-Play-Store hochzuladen und dort zu vermarkten ist ein Google-Developer Account nötig.
 Weiters muss die App der EULA von Google zur Vermarktung von Apps in ihrem Store entsprechen.
 
