--- a/FIPLY/Dokumente/FIPLY Latex/denkmayr_Donations.tex
+++ b/FIPLY/Dokumente/FIPLY Latex/denkmayr_Donations.tex
@@ -7,7 +7,7 @@
 \subsection{Donations}
 Donations stellen eine Möglichkeit für Benutzer dar den Entwicklern einer App Geld zu spenden, um Ihren Dank auszudrücken oder die Entwicklung der App zu unterstützen.
 Es gibt viele Möglichkeiten, um die Implementierung von Donations zu unterstützen.\newline
-Zu den populärsten Formen zählen Dienste wie PayPal, Flattr, das Implementieren von In-App-Käufen, die keinen Gegenwert liefern, oder das Erstellen einer kostenpflichtigen App, die keine Funktionen beinhaltet und denselben Namen wie die Gratis App aber einen Suffix wie z.B.: Donation trägt.
+Zu den populärsten Formen von Donations zählen Dienste wie PayPal, Flattr, das Implementieren von In-App-Käufen und das Erstellen einer zweiten, kostenpflichtigen App. %Beistrich
 
 
 \subsubsection{Flattr}
@@ -40,7 +40,7 @@ One time-payments, including peer-to-peer payments, online auctions, and donatio
 Nach diesem Modell werden In-App-Käufe zur Verfügung gestellt, die dem Benutzer die Möglichkeit geben Geld zu bezahlen, ohne einen Gegenwert zu erhalten. 
 Die In-App-Käufe werden im Kapitel Freemium näher beschrieben.
 \ \\
-\subsubsection{Zweite kostenpflichtige App}
+\subsubsection{Donation App}
 Es besteht die Möglichkeit eine zweite App zu erstellen, die selbst keine Funktionen beinhaltet und denselben Namen wie die Gratis App aber einen Suffix wie z.B.: (Donation) trägt.
 In diesem Fall kann ein zufriedener Benutzer diese zweite App kaufen und so die Entwickler der Gratis App unterstützen.
 
