--- a/FIPLY/Dokumente/FIPLY Latex/denkmayr_Github.tex
+++ b/FIPLY/Dokumente/FIPLY Latex/denkmayr_Github.tex
@@ -61,7 +61,7 @@ Dies kann sowohl auf privaten als auch auf öffentlichen Servern, wie beispielsw
 
 \subsubsection{Commit}
 Der Vorgang eine neue Version in das lokale Repository einzureichen, wird als Commit bezeichnet.
-Das bedeutet, dass diese neue Version auf die aktuelle Branch übernommen wird.
+Das bedeutet, dass alle Änderungen auf die aktuelle Branch übernommen werden.
 Zu diesen Commits kann zurückgesprungen werden, was eine sehr hohe Transparenz im Entwicklungsvorgang ermöglicht.
 Das Projekt sollte zum Zeitpunkt eines Commits immer lauffähig sein! 
  
