Geändert: Rechtschreiben Prüfung bei teil bersenkowitsch, Danksagung ausgebessert, stütz aus personas gelöscht (wie gewollt), icon Formatierung geändert.
fehlt: abstrakt und tabellenformatierung ausbessern sowie
abnahmekriterien im Pflichtenheft abändern.

--- a/FIPLY/Dokumente/FIPLY Latex/all_danksagung.tex
+++ b/FIPLY/Dokumente/FIPLY Latex/all_danksagung.tex
@@ -13,7 +13,7 @@
 	\begin{itemize}
 		\item Bei den Lehrern, die uns während des Projektes zur Hilfe bereit standen und uns bei Fragen behilflich waren.
 		\ \\
-		\item Bei unserem Betreuungslehrer Mag. Dr. Prof. Thomas Stütz, der sich dazu entschloss uns bei der Diplomarbeit mit Rat und Tat zur Seite zu stehen.
+		\item Bei unserem Betreuungslehrer Mag. Dr. Prof. Thomas Stütz, der sich dazu bereit erklärte bei unserer Arbeit mit Rat und Tat zur Seite zu stehen.
 		\ \\
 		\item Bei allen Korrekturlesern der Dokumente, um diese fehlerfrei und ordentlich einzureichen.
 		\ \\
