--- a/FIPLY/Dokumente/FIPLY Latex/bersenkowitsch_Trainingsplan.tex
+++ b/FIPLY/Dokumente/FIPLY Latex/bersenkowitsch_Trainingsplan.tex
@@ -127,7 +127,7 @@
 	\subsection{Phase 2: Muskelaufbau \newline Phase 3: Kraftausdauer}	
 	Wenn man als Trainingsziel \grqq{}Muskelaufbau\grqq{} gewählt hat, kommt diese nach Phase 1, oder wenn man Phase 2: Kraftausdauer (Gesundheit) abgeschlossen hat. In dieser Phase kommt viel Hantel- und Seilzugtraining zum Einsatz. Dabei ist zu beachten, dass die Schwierigkeit der "Ubung egal ist. Es wird davon ausgegangen, dass ein Anf"anger nach der 8-w"ochigen Phase 1 bereits fit genug ist, um alle "Ubungen die sich im Trainingskatalog befinden zu meistern. 
 	\newline
-	Der User kann sich beginnend aussuchen, welche 2-3 Muskelgruppen er trainieren will. Am Phasenanfang wird zwischen Splittraining und Ganzkörpertraining unterschieden. Der Unterschied zwischen den Trainingsarten liegt bei der zeitlichen Ausführung der "Ubungen. Bei dem Splittraining werden "Ubungen zu einer bestimmten Muskelgruppe bei jeder Trainingseinheit durchgeführt. Umgekehrt wird bei dem Ganzk"orpertraining in jeder Trainingseinheit auf einen bestimmte Muskelgruppe geziehlt. 
+	Der User kann sich zu Beginn aussuchen, welche 2-3 Muskelgruppen er trainieren will. Am Phasenanfang wird zwischen Splittraining und Ganzkörpertraining unterschieden. Der Unterschied zwischen den Trainingsarten liegt bei der zeitlichen Ausführung der "Ubungen. Bei dem Splittraining werden "Ubungen zu einer bestimmten Muskelgruppe bei jeder Trainingseinheit durchgeführt. Umgekehrt wird bei dem Ganzk"orpertraining in jeder Trainingseinheit auf einen bestimmte Muskelgruppe geziehlt. 
 	\newline
 	Diese Phase besteht wieder aus 3 Trainingstagen pro Woche und das empfohlene Trainingsgewicht liegt bei 80\% RM. Die Satzpausendauer beträgt 90-120 Sekunden, bei 3 S"atzen und 12 Wiederholungen. Je nach Anzahl der fokusierten Muskelgruppen bestimmt sich die Zahl der "Ubungen, die man bekommt: Bei 2 Muskelbereiche sind es 6 "Ubungen, bei 3 sind es 9 "Ubungen. Nach dieser 8-wöchigen Phase kommt Phase 3: Muskelaufbau.
 	\newline
