--- a/FIPLY/Dokumente/FIPLY Latex/bersenkowitsch_latex.tex
+++ b/FIPLY/Dokumente/FIPLY Latex/bersenkowitsch_latex.tex
@@ -4,6 +4,6 @@
 
 \begin{document}
 	\subsubsection{TexStudio}
-	TexStudio ist eine im Jahr 2009 herausgekommene Entwicklungsumgebung für Latex dokumente. Entwickelt von Jan Sundermeyer, Daniel Braun und Tim Hoffmann ist sie eine der meistgenutzten Latex IDE für den Mac Computer und basiert auf Texmaker.
+	TexStudio ist eine im Jahr 2009 herausgekommene Entwicklungsumgebung für Latex-Dokumente. Entwickelt von Jan Sundermeyer, Daniel Braun und Tim Hoffmann ist sie eine der meistgenutzten Latex IDE für den Mac Computer und basiert auf dem Programm Texmaker.
 	[\citetitle{texstudio} \cite{texstudio}]   
 \end{document}
