--- a/FIPLY/Dokumente/FIPLY Latex/bersenkowitsch_photoshop.tex
+++ b/FIPLY/Dokumente/FIPLY Latex/bersenkowitsch_photoshop.tex
@@ -4,6 +4,6 @@
 	
 \begin{document}
 	\subsection{Adobe Photoshop}
-	Adobe Photoshop ist ein plattformunabhängiges Bildbearbeitungsprogramm des Entwicklungskonzerns Adobe Systems. Es gilt als das Bildbearbeitungsprogramm schlecht hin und ist in seinem Bereich marktführend. Sämtliche Icons inklusive Logo der Fiply-Applikation wurden mittels diesem Programm illustriert. 
+	Adobe Photoshop ist ein Bildbearbeitungsprogramm des Entwicklungskonzerns Adobe Systems. Es gilt als das Bildbearbeitungsprogramm schlecht hin und ist in seinem Bereich marktführend. Sämtliche Icons inklusive Logo der Fiply-Applikation wurden mittels diesem Programm illustriert. 
 	[\citetitle{adobephoto} \cite{adobephoto}]  
 \end{document}
