--- a/FIPLY/Dokumente/FIPLY Latex/literatur.bib
+++ b/FIPLY/Dokumente/FIPLY Latex/literatur.bib
@@ -1,5 +1,12 @@
 % Encoding: UTF-8
 
+@Misc{andrSupp,
+	title = {Google stellt Support ein},
+	month = apr,
+	year =  {2016},
+	url =   {http://www.heise.de/developer/meldung/Google-stellt-Support-fuer-Eclipse-Android-Tools-zum-Ende-des-Jahres-ein-2730785.html}
+}
+
 @Misc{2016,
   title = {Möglichkeiten der App Vermarktung: Teil 1},
   month = feb,
