--- a/FIPLY/Dokumente/FIPLY Latex/bersenkowitsch_DataBinding.tex
+++ b/FIPLY/Dokumente/FIPLY Latex/bersenkowitsch_DataBinding.tex
@@ -6,13 +6,12 @@
 
 \subsection{Datenanbindung}
 Als Datenbindung (engl. Data Binding) bezeichnet man die automatische Weitergabe von Daten zwischen Objekten. Typischerweise werden Daten aus einem Datenobjekt an ein Steuerelement der Benutzeroberfläche weitergegeben. Aber auch zwischen Steuerelementen ist Datenbindung in einigen Frameworks möglich. [\citetitle{datbdef} \cite{datbdef}]
-\newline
+\ \\
 Beim Anzeigen von Daten in einer Listenansicht beispielsweise muss man das Steuerungselement nach jeder Veränderung der Daten aktualisieren. Wenn man aber die Technologie der Datenanbindung verwendet, braucht man nur die Objektliste an das Steuerungselement mit einem einfachen Zuweisungsbefehl anbinden. Dadurch erneuert sich die Listenansicht der Daten jedes Mal automatisch, sobald sich die Objektliste auch verändert.
-
-
+\ \\
 \subsubsection{Verwendungszweck}
 In erster Linie werden dem Programmierer dadurch viele Zeilen Code erspart. Datenanbindung trennt einen großen Teil des UI Codes von den Aktivitäten und Fragmenten, wodurch eine bessere Übersicht über das Projekt verschafft wird. Zusätzlich erspart man sich umständliche findViewById Codierungen, die sehr performancelastig sind. [\citetitle{datbusing} \cite{datbusing}]
-
+\ \\
 
 \subsubsection{Vorher}
 
@@ -34,7 +33,7 @@ Auf der unterstehenden Grafik ist eine Android XML-Layoutdatei mit dem Code in d
 		android:layout_height="wrap_content"
 		tools:text="Smith"/>	
 \end{lstlisting}
-
+\ \\
 
 \begin{lstlisting}[caption={Die Activity vor dem Einsatz von DataBinding.},label=DescriptiveLabel]
 public class OldWayActivity extends AppCombatActivity {
@@ -55,7 +54,6 @@ public class OldWayActivity extends AppCombatActivity {
 	}
 }
 \end{lstlisting}
-
 
 Ein weitere Umständlichkeit ist es, für jedes Element ein findViewById-casting vornehmen zu müssen, wie wir es im Aktivitätencode vorfinden. Dieses Zugriffsverfahren ist, wie bereits oben erwähnt, unnötig performancelastig und kann vermieden werden.
 \subsubsection{Nacher}
@@ -82,7 +80,7 @@ Ein weitere Umständlichkeit ist es, für jedes Element ein findViewById-casting
 			android:Text="@{employee.lastName}"/>
 </layout>	
 \end{lstlisting}
-
+\ \\
 
 \begin{lstlisting}[caption={Die Activity vor dem Einsatz von DataBinding.},label=DescriptiveLabel]
 public class BindingActivity extends AppCombatActivity {
@@ -98,17 +96,17 @@ public class BindingActivity extends AppCombatActivity {
 	}
 }
 \end{lstlisting}
-
+\ \\
 
 Auf dieser Grafik ist nun eine Android XML-Layoutdatei mit dem Code in der zugehörigen Aktivität bei Verwendung von Datenanbindung zu sehen. Man muss keine eindeutigen IDs für jedes vorkommende Element mehr vergeben. Ein weiterer Vorteil ist es, keine findViewById Aufrufe durchführen zu müssen. Man übergibt nur noch das zu bindende Objekt, an dessen Attribute sich die in der Layoutdatei befindenden Elemente orientieren. 
-Ein weiterer Pluspunkt: Man erkennt sofort für was welches Steuerelement zuständig ist. Ein Programmierer der sich gerade in ein Projekt einarbeitet, erkennt sofort, dass bei der ersten TextView der Vorname eines Employeeobjektes angezeigt wird und bei der anderen der Nachname.
+Ein weiterer Pluspunkt: Man erkennt sofort für was welches Steuerelement zuständig ist. Ein Programmierer der sich gerade in ein Projekt einarbeitet, erkennt sofort, dass bei der ersten TextView der Vorname eines Employeeobjektes angezeigt wird und bei der Anderen der Nachname.
 \ \\
 
 \subsubsection{Anwendung}
 Bei der Verwendung von Datenanbindung muss man darauf achten, eine aktuelle Gradle Version zu benutzen (min. 1.5). Zusätzlich muss man in der build.gradle (Module App) Datei innerhalb des android\{\}-Bereichs dataBinding auf enabled=true (dataBinding\{enabled=true\}) setzen, um Datenanbindung möglich zu machen.
 \paragraph{In der .xml Datei}
 \ \\
-Gehen wir davon aus, unsere .xml Datei besteht aus einem Linearlayout und zwei TextViews: Remo
+Gehen wir davon aus, unsere .xml Datei besteht aus einem Linearlayout und zwei TextViews:
 
 \begin{lstlisting}[caption={Layoutcode ohne jedliche Datenanbindung.},label=DescriptiveLabel]
 <?xml version="1.0" encoding="utf-8"?>
@@ -177,13 +175,12 @@ Ist diese erstellt, kann bei der Layoutdatei weitergemacht werden. Es wird nun e
 </layout>
 \end{lstlisting}
 
-
 Jetzt können wir unsere ID-Vergabe bei den Elementen löschen und im Text-Tag auf die jeweiligen Attribute des Userobjekts verweisen.
 
 \newpage
 \paragraph{In der .java Klasse}
 \ \\
-Die Datenanbindungstechnologie von Android generiert automatisch spezielle Bindingklasse all jener Layoutdateien die es verwenden. Der Name ergibt sich aus dem Namen der .xml Datei + "binding". Also wenn eine Layoutdatei activity\_main.xml benannt ist, wird daraus die Klasse ActivityMainBinding generiert, die wir nun verwenden können:
+Die Datenanbindungstechnologie von Android generiert automatisch spezielle Bindingklassen all jener Layoutdateien die es verwenden. Der Name ergibt sich aus dem Namen der .xml Datei + "Binding". Also wenn eine Layoutdatei activity\_main.xml benannt ist, wird daraus die Klasse ActivityMainBinding generiert, die wir nun verwenden können:
 
 \begin{lstlisting}[caption={Die Aktivitätenklasse nach der Integration einer Datenanbindung.},label=DescriptiveLabel]
 package com.example.daniel.showcasedatabinding;
