--- a/FIPLY/Dokumente/FIPLY Latex/bersenkowitsch_androidstudio.tex
+++ b/FIPLY/Dokumente/FIPLY Latex/bersenkowitsch_androidstudio.tex
@@ -10,6 +10,5 @@
 	Android Studio ist sehr komfortabel. Es ist übersichtlich und sehr einfach zu bedienen. Die automatische Vervollständigung ist meist richtig und führt dadurch zu einer hohen Programmiereffizienz. Des Weiteren sind keine Plug-Ins nötig und durch das Gradle System sehr mächtig.
 	\subsubsection{Nachteile}
 	Android Studio ist rein für die Entwicklung von Androidprojekten gedacht und ist die am weitesten entwickelte Android IDE. Als einzige \grqq{}Konkurrenz\grqq{} gilt die Ecplipse IDE. Da Google aber seit der Erscheinung von Android Studio keinen Support mehr für Eclipse bietet, gilt diese als veraltet in der Androidentwicklung. Somit gibt es keine vergleichbare Technologie, die sich in einem positiven Sinne abheben kann und Android Studio einen Nachteil verschafft.
-	\ \\
-
+	[\citetitle{andrSupp} \cite{andrSupp}]  
 \end{document}
