--- a/FIPLY/Dokumente/FIPLY Latex/bersenkowitsch_export.tex
+++ b/FIPLY/Dokumente/FIPLY Latex/bersenkowitsch_export.tex
@@ -29,22 +29,21 @@ CSV-Datei lesen:
 	}
 
 \end{lstlisting}
-
-Das Objekt reader ist öffnet einen Stream zu der erzielten Datei \grqq{}file.csv\grqq{}. Mittels der Standardfunktion .readNext() wird die nächste Zeile in ein eindimensionales String-Array gespeichert. Jede Arraystelle beschreibt den Inhalt eines Spaltenfeldes in der aktuellen Zeile der CSV-Datei.
-
-\
+\ \\
+Das Objekt \grqq{}reader\grqq{} öffnet einen Stream zu der erzielten Datei \grqq{}file.csv\grqq{}. Mittels der Standardfunktion .readNext() wird die nächste Zeile in ein eindimensionales String-Array gespeichert. Jede Arraystelle beschreibt den Inhalt eines Spaltenfeldes in der aktuellen Zeile der CSV-Datei.
+\ \\
 \begin{lstlisting}[caption={Verwendung von CSVReader: Möglichkeit 2, alles auf einmal},label=DescriptiveLabel]
 	CSVReader reader = new CSVReader(
 		new FileReader(path + "file.csv"));
 	List myEntries = reader.readAll();
 \end{lstlisting}
-
+\ \\
 Das Objekt reader ist öffnet wieder einen Stream zu der erzielten Datei \grqq{}file.csv\grqq{}. Durch die Standardfunktion .readAll() werden alle Zeilen bis zum Ende der Datei in eine List gespeichert. Das Listenobjekt myEntries ist eine Liste bestehend aus eindimensionalen Arrays, wobei wieder jede Arraystelle sequentiell den Inhalt eines Spaltenfeldes in der CSV-Datei beschreibt.[\citetitle{exportCSVSourceRead} \cite{exportCSVSourceRead}] 
 \ \\
 \ \\
 CSV-Datei schreiben:
 \ \\
-Eine CSV-Datei zu erstellen und schreiben ist genau so einfach wie sie zu lesen. Hierbei wird die Klasse \grqq{}CSVWriter\grqq{} verwendet:
+Eine CSV-Datei zu erstellen und schreiben ist genau so einfach, wie sie zu lesen. Hierbei wird die Klasse \grqq{}CSVWriter\grqq{} verwendet:
 
 \begin{lstlisting}[caption={Verwendung von CSVWriter: Möglichkeit 1, iterativ},label=DescriptiveLabel]
 	CSVWriter writer = new CSVWriter(
@@ -55,45 +54,46 @@ Eine CSV-Datei zu erstellen und schreiben ist genau so einfach wie sie zu lesen.
 	}
 	writer.close();
 \end{lstlisting}
-Das Objekt writer ist öffnet einen Stream zu der erzielten Datei \grqq{}file.csv\grqq{}. Falls die Datei nicht existiert, wird sie angelegt.
-Die Methode getNextCountries() liefert in diesem Kontext ein eindimensionales Array zurück. Mit dem Befehl .writeNext() werden Strings in dem Array in eine neue Zeile der Datei gespeichert, wobei jede Arraystelle für eine Spalte der Tabellendatei steht.
+\ \\
+Das Objekt \grqq{}writer\grqq{} öffnet einen Stream zu der erzielten Datei \grqq{}file.csv\grqq{}. Falls die Datei nicht existiert, wird sie angelegt.
+Die Methode .getNextCountries() liefert in diesem Kontext ein eindimensionales Array zurück. Mit dem Befehl .writeNext() werden Strings in dem Array in eine neue Zeile der Datei gespeichert, wobei jede Arraystelle für eine Spalte der Tabellendatei steht.
+\ \\
 \begin{lstlisting}[caption={Verwendung von CSVWriter: Möglichkeit 2, alles auf einmal},label=DescriptiveLabel]
 	CSVWriter writer = new CSVWriter(
 	new FileWriter(path + "file.csv"));
-List<String[]> data = new ArrayList<String[]>();
-data.add(new String[] {"India", "New Delhi"});
-data.add(new String[] {"United States", "Washington D.C"});
-data.add(new String[] {"Germany", "Berlin"});
-writer.writeAll(data);
+    List<String[]> data = new ArrayList<String[]>();
+    data.add(new String[] {"India", "New Delhi"});
+    data.add(new String[] {"United States", "Washington D.C"});
+    data.add(new String[] {"Germany", "Berlin"});
+    writer.writeAll(data);
 
-writer.close();
+    writer.close();
 }
 \end{lstlisting}
-Das Objekt writer ist öffnet einen Stream zu der erzielten Datei \grqq{}file.csv\grqq{}. Falls die Datei nicht existiert, wird sie angelegt.
+\ \\
+Das Objekt \grqq{}writer\grqq{} öffnet einen Stream zu der erzielten Datei \grqq{}file.csv\grqq{}. Falls die Datei nicht existiert, wird sie angelegt.
 Es wird eine Liste von eindimensionalen Arrays angelegt. Wie auch in den obigen Beispielen steht jede Arraystelle für eine Spalte in der Tabellendatei. Mit dem Befehl .writeAll() werden alle Elemente sequentiell in die Datei gespeichert.
 [\citetitle{exportCSVSourceWrite} \cite{exportCSVSourceWrite}] 
-
-
+\ \\
 \subsubsection{Emails senden}
 \paragraph{Mittels Intents}
-Die beste Möglichkeit, um eine Email in Android zu senden, ist das benutzen eines Intents:
+Die beste Möglichkeit, um eine Email in Android zu senden, ist es, dies mittels eines Intents zu tun. 
 \begin{lstlisting}[caption={Verwendung von CSVWriter: Möglichkeit 2, alles auf einmal},label=DescriptiveLabel]
-File file = new File(path, "file.csv");
-Uri u  =   null;
-u  =   Uri.fromFile(file);
+    File file = new File(path, "file.csv");
+    Uri u = null;
+    u = Uri.fromFile(file);
 
-Intent sendIntent = new Intent(Intent.ACTION_SEND);
-sendIntent.putExtra(Intent.EXTRA_SUBJECT, "Dein FIPLY Trainingsplan");
-sendIntent.putExtra(Intent.EXTRA_STREAM, u);
-sendIntent.setType("text/html");
-startActivity(sendIntent);
+    Intent sendIntent = new Intent(Intent.ACTION_SEND);
+    sendIntent.putExtra(Intent.EXTRA_SUBJECT, "Dein FIPLY Trainingsplan");
+    sendIntent.putExtra(Intent.EXTRA_STREAM, u);
+    sendIntent.setType("text/html");
+    startActivity(sendIntent);
 \end{lstlisting}
-Das senden von Emails mittels Intents erfolgt damit über externe Applikationen, die diese Funktion anbieten. Bei ausführen des obigen Codes wird der Benutzer gefragt, mit welchem Emailclient auf seinem Smartphone er die Aktion durchführen will. Die Emaildetails werden der externen Applikation mitgegeben, worauf sich diese öffnet und der benutzer dann nur noch auf den \grqq{}senden\grqq{}-Knopf drücken muss. [\citetitle{exportCSVsendMail} \cite{exportCSVsendMail}]
+\ \\
+Das Senden von Emails mittels Intents erfolgt damit über externe Applikationen, die diese Funktion anbieten. Bei Ausführung des obigen Codes wird der Benutzer gefragt, mit welchem Emailclient auf seinem Smartphone er die Aktion durchführen will. Die Emaildetails werden der externen Applikation mitgegeben, worauf sich diese öffnet und der benutzer dann nur noch auf den \grqq{}Senden\grqq{}-Knopf drücken muss. [\citetitle{exportCSVsendMail} \cite{exportCSVsendMail}]
 \paragraph{Vorteile/Nachteile von Intents}
-Der große Vorteil dieser Methode ist es, dass man ohne eigenen Emailclient auskommt. Da die Email über eine andere Applikation versendet wird muss sich der Entwickler nicht weiter um aufwendige Emailclient codierungen kümmern. 
+Der große Vorteil dieser Methode ist es, dass man ohne eigenen Emailclient auskommt. Da die Email über eine andere Applikation versendet wird muss sich der Entwickler nicht weiter um aufwendige Emailclient-Codierungen kümmern. 
 \ \\
-Ohne bereits installierten Client auf dem Android Gerät ist das senden von Emails über diese vorgehensweise nicht möglich. Ein gutes Beispiel dafür ist das Ausführen der Funktion auf einem Android-Emulator auf einem beliebigen Computer. Standardmäßig ist auf einem Android-Emulator kein Emailclient wie zum Beispiel die Gmail Applikation installiert. Daher kann die Funktion auf einem Emulator nicht getestet werden, bevor man einen manuell installiert. 
+Ohne bereits installierten Client auf dem Android Gerät ist das Senden von Emails über diese vorgehensweise nicht möglich. Ein gutes Beispiel dafür ist das Ausführen der Funktion auf einem Android-Emulator. Standardmäßig ist auf einem Android-Emulator kein Emailclient, wie zum Beispiel die Gmail Applikation, installiert. Daher kann die Funktion auf einem Emulator nicht getestet werden, bevor man einen manuell installiert. 
 \ \\
-
-
 \end{document}
