--- a/FIPLY/Dokumente/FIPLY Latex/denkmayr_Donations.tex
+++ b/FIPLY/Dokumente/FIPLY Latex/denkmayr_Donations.tex
@@ -5,7 +5,7 @@
 
 \begin{document}
 \subsection{Donations}
-Donations stellen eine Möglichkeit für Benutzer dar den Entwicklern einer App Geld zu spenden, um Ihren Dank auszudrücken oder die Entwicklung der App zu unterstützen.
+Donations stellen eine Möglichkeit für Benutzer dar, den Entwicklern einer App Geld zu spenden, um Ihren Dank auszudrücken, oder die Entwicklung der App zu unterstützen.
 Es gibt viele Möglichkeiten, um die Implementierung von Donations zu unterstützen.\newline
 Zu den populärsten Formen von Donations zählen Dienste wie PayPal, Flattr, das Implementieren von In-App-Käufen und das Erstellen einer zweiten, kostenpflichtigen App. %Beistrich
 
