--- a/FIPLY/Dokumente/FIPLY Latex/denkmayr_NavigationDrawer.tex
+++ b/FIPLY/Dokumente/FIPLY Latex/denkmayr_NavigationDrawer.tex
@@ -6,8 +6,8 @@
 \begin{document}
 \subsection{NavigationDrawer}
 Der NavigationDrawer ist ein Menü, das die wichtigsten Navigationsoptionen am linken Bildschirmrand abbildet.
-Diese Leiste ist meistens versteckt und wird angezeigt sobald der Benutzer mit dem Finger vom linken Rand des Bildschirms in Richtung Bildschirmmitte streicht oder auf das NavigationDrawerIcon klickt.
-Erneutes Klicken auf dieses Icon oder Streichen nach links versteckt den NavigationDrawer. \newline
+Diese Leiste ist meistens versteckt und wird angezeigt, sobald der Benutzer mit dem Finger vom linken Rand des Bildschirms in Richtung Bildschirmmitte streicht, oder auf das NavigationDrawerIcon klickt.
+Erneutes Klicken auf dieses Icon, oder Streichen nach links, versteckt den NavigationDrawer. \newline
 [\citeauthor{bNavDrawer} \cite{bNavDrawer}, \citeauthor{bNavDrawerRT} \cite{bNavDrawerRT}, Android Developers \cite{adNavDrawer}]
 \ \\
 \begin{figure}[h]
