--- a/FIPLY/Dokumente/FIPLY Latex/denkmayr_Permissions.tex
+++ b/FIPLY/Dokumente/FIPLY Latex/denkmayr_Permissions.tex
@@ -24,7 +24,7 @@ Da eine Applikation zu Beginn keine Permissions besitzt, müssen diese im Manife
 \subsubsection{Arten von Permissions}
 Android unterstützt mehrere Levels von Permissions.
 \begin{itemize}
-\item \textbf{Normal Permissions} stellen kaum Gefahr für die Privatsphäre des Benutzers oder den Betrieb des Systems dar und werden automatisch gegeben sobald sie im Manifest angefordert werden.
+\item \textbf{Normal Permissions} stellen kaum Gefahr für die Privatsphäre des Benutzers oder den Betrieb des Systems dar und werden automatisch gegeben, sobald sie im Manifest angefordert werden.
 
 \item \textbf{Dangerous Permissions} hingegen, können gefährlich für die Privatsphäre des Benutzers werden oder den Betrieb des Systems erheblich stören. 
 Deshalb müssen Dangerous Permissions nicht nur im Manifest angefordert werden, sondern auch explizit vom Benutzer bestätigt werden.
