--- a/FIPLY/Dokumente/FIPLY Latex/denkmayr_latex.tex
+++ b/FIPLY/Dokumente/FIPLY Latex/denkmayr_latex.tex
@@ -7,7 +7,7 @@
 \subsubsection{Subfiles}
 Um gleichzeitiges Arbeiten zu erleichtern, werden Subfiles verwendet.
 Zusätzlich wird das Arbeiten übersichtlicher, da man sich nicht um ein langes Dokument kümmern muss, sondern Kapitel für Kapitel schreiben und kontrollieren kann.
-Der schriftliche Teil der Diplomarbeit wird in das Basisdokument FIPLY\_base.tex und in eine Vielzahl von Subfiles unterteilt.
+Der schriftliche Teil dieser Diplomarbeit wird in das Basisdokument FIPLY\_base.tex und in eine Vielzahl von Subfiles unterteilt.
 
 \ \\
 Dazu wird das Subfiles Package in das Basisdokument eingebunden.
