--- a/FIPLY/Dokumente/FIPLY Latex/irsiegler_PaidVersion.tex
+++ b/FIPLY/Dokumente/FIPLY Latex/irsiegler_PaidVersion.tex
@@ -9,7 +9,7 @@
 
 \subsubsection{Beschreibung}\ \\
 Die App wird mit einem fixen Preis veröffentlicht bzw. verkauft.
-Der Kunde bezahlt ein mal und erhält unser Produkt, mit seinem gesamten Funktionsumfang, sofort.
+Der Kunde bezahlt ein mal und erhält das Produkt, mit dem gesamten Funktionsumfang, sofort.
 Alle zukünftigen Updates sind im Preisumfang enthalten.
 
 \subsubsection{Vorteile}\ \\
@@ -32,7 +32,7 @@ Dies könnte möglicherweise abschreckend wirken.
 \end{itemize}
 
 \subsubsection{Preis}\ \\
-Der Preis unseres Produktes wird anfänglich bei weniger als einem Euro liegen.
+Der Preis dieses Produktes wird anfänglich bei weniger als einem Euro liegen.
 Bei einer stetig wachsenden Benutzeranzahl wird der Preis auf einen bis zwei Euro erhöht werden.
 Dies ist jedoch das Maximum, da ein zu hoher Preis zu niedrigeren Verkaufszahlen führt.
 
