--- a/FIPLY/Dokumente/FIPLY Latex/irsiegler_Statistic.tex
+++ b/FIPLY/Dokumente/FIPLY Latex/irsiegler_Statistic.tex
@@ -9,7 +9,7 @@
 \subsubsection{Beschreibung}
 Die Statistik gibt dem Benutzer eine Übersicht zu seinem Training in den letzen Tagen/Wochen/Monaten. 
 \ \\
-Es werden verschiedene Statistiken zur Verfügung gestellt, um so viel Informationen wie möglich darzustellen.
+Es werden verschiedene Statistiken zur Verfügung gestellt, um dem Benutzer einen guten Überblick zu geben.
 
 \begin{figure}[H]
 	\begin{subfigure}[b]{0.3\textwidth}
@@ -26,7 +26,7 @@ Diese Statistik beschreibt wie es dem Benutzer nach jeder Trainingseinheit geht.
 Er soll auf einer Skala von eins bis fünf seinen geistigen Zustand nach dem Training bewerten, wobei eine höhere Zahl eine bessere Laune beschreibt.
 \paragraph{Gehobenes Gewicht}\ \\
 Nach jeder Trainingseinheit wird angegeben mit wieviel Gewicht die jeweiligen Übungen durchgeführt worden sind.
-Anhand dieser Statistik kann man seine Entwicklung sehr gut verfolgen
+Anhand dieser Statistik kann man den Muskelaufbau des Benutzers sehr gut verfolgen
 \paragraph{Insgesamt gestemmtes Gewicht}\ \\
 Hier wird festgehalten wieviel Gewicht der Benutzer insgesamt an einem Tag, einer Woche, einem Monat gestemmt hat.
 
@@ -65,9 +65,6 @@ public class MoodTime implements DataPointInterface {
 \paragraph{Darstellung}\ \\
 Zur Darstellung der Statistiken wird GraphView verwendet. GraphView ist eine open-source Library für Android zur Erstellung von Diagrammen.
 Verfügbar sind eine Vielzahl von Diagramm-Arten wie z.B.: Linien-, Kuchen- und Punktdiagrammen.
-
-
-
 
 
 \end{document}
