--- a/FIPLY/Dokumente/FIPLY Latex/irsiegler_Video.tex
+++ b/FIPLY/Dokumente/FIPLY Latex/irsiegler_Video.tex
@@ -9,7 +9,7 @@
 \paragraph{Beschreibung}\ \\
 VideoView ist die native Lösung von Android, Videos in einer App darzustellen. Sie können entweder direkt vom Speicher des Systems oder über einen RTSP-Key (Real-Time Streaming Protocol) auch vom Internet  abgespielt werden.
 \paragraph{Vorteile}\ \\
-Die native Lösung von Android ist die performanteste aller unserer Optionen.
+Die native Lösung von Android ist die performanteste aller Optionen.
 \paragraph{Probleme}\ \\
 Der RTSP-Key ist sehr umständlich abzurufen und die VideoView ist generell eine etwas ältere Lösung.
 
@@ -17,7 +17,7 @@ Der RTSP-Key ist sehr umständlich abzurufen und die VideoView ist generell eine
 \paragraph{Beschreibung}\ \\
 Die Youtube Android Player API ist die von Google entwickelte Lösung ausschließlich Youtube-Videos in einer Android Umgebung abzuspielen.
 \paragraph{Vorteile}\ \\
-Da die Youtube Android Player API rein für das Abspielen von Youtube Videos konzipiert ist, ist es die beste Lösung für unser Problem.
+Da die Youtube Android Player API rein für das Abspielen von Youtube Videos konzipiert ist, ist es die beste Lösung für die Problemstellung.
 \paragraph{Probleme}\ \\
 Für diese Methode wird leider ein Google Developer Key, welcher derzeit nicht verfügbar ist benötigt.\ \\
 Weiters muss die YouTube-App auf dem Mobilgerätes des Benutzers installiert sein damit diese Methode funktioniert.
@@ -27,7 +27,7 @@ Weiters muss die YouTube-App auf dem Mobilgerätes des Benutzers installiert sei
 \paragraph{Beschreibung}\ \\
 Die WebView erlaubt es HTML-Code oder Websites direkt über deren URL in der App darzustellen.
 \paragraph{Vorteile}\ \\
-Die WebView ist leicht zu benützen und mit den embeded Links von Youtube können wir unsere Videos leicht einbinden. Weiters ist die WebView sehr flexibel da man auch reinen HTML Code darstellen kann.
+Die WebView ist leicht zu benützen und mit den embeded Links von Youtube können die Videos leicht eingebunden werden. Weiters ist die WebView sehr flexibel da man auch reinen HTML Code darstellen kann.
 \paragraph{Probleme}\ \\
 Da es kein direkter Video-Player ist muss der Youtube-Player in die WebView embeded werden, dadurch wird die Perfomance der App beeinträchtigt. Weiters muss die Vollbild Funktionalität selbst implementiert werden, da es noch keine vorgegebene Lösung gibt.
 
