--- a/FIPLY/Dokumente/FIPLY Latex/irsiegler_FreePremium.tex
+++ b/FIPLY/Dokumente/FIPLY Latex/irsiegler_FreePremium.tex
@@ -9,7 +9,7 @@
 
 \subsubsection{Beschreibung}\ \\
 Es ist eine Basis (Gratis) Version gratis erhältlich, diese enthält nicht den gesamten Funktionsumhang.
-Um alle Funktionen freizuschalten ist eine Gebühr zu zahlen.
+Um alle Funktionen freizuschalten muss eine Gebühr bezahlt werden.
 
 \subsubsection{Vorteile}\ \\
 \begin{itemize}
@@ -19,8 +19,8 @@ Um alle Funktionen freizuschalten ist eine Gebühr zu zahlen.
 
 \subsubsection{Nachteile}\ \\
 \begin{itemize}
-\item Der Hauptteil aller Applikationen die dieses Modell wählen, sind während ihrer Lebenszeit nicht profitabel. Nur ein sehr kleiner Teil kann sich durchsetzen.
-\item Es gibt im Google-Play-Store etwa vier mal mehr gratis Apps, als bezahlte Apps und somit ist es schwerer sich mit einer App am Markt durchzusetzen.
+\item Der Hauptteil aller Applikationen die dieses Modell wählen, sind während ihrer Lebenszeit nicht profitabel d.h. dass die Entwicklungskosten den Profit überwiegen. Nur ein sehr kleiner Teil kann sich am Markt durchsetzen.
+\item Es gibt im Google-Play-Store etwa vier mal mehr gratis Apps als bezahlte Apps und somit ist es schwerer sich mit einer App am Markt durchzusetzen.
 \end{itemize}
 
 \subsubsection{Implementierung}\ \\
