--- a/FIPLY/Dokumente/FIPLY Latex/irsiegler_SellApp.tex
+++ b/FIPLY/Dokumente/FIPLY Latex/irsiegler_SellApp.tex
@@ -25,7 +25,6 @@ Nachdem die App eine größere Benutzerbasis hat, könnte es Interessenten zum K
 
 \subsubsection{Probleme/Schwierigkeiten}\ \\
 Es werden einige Problem aufgeworfen beim Verkauf einer App an eine größere Firma. Die erste Hürde ist einen Käufer zu finden.
-Ohne eine große Userbasis wird das Interesse an unserem Produkt sehr niedrig sein, deshalb wird es eine Weile dauern bis uns diese Möglichkeit zur Verfügung steht.
-Weiters fehlt uns in dieser Hinsicht die Erfahrung, also müssten wir uns auf dritte Personen verlassen den Verkauf für uns abzuwickeln.
-
+Ohne eine große Userbasis wird das Interesse an dem Produkt sehr niedrig sein, deshalb wird es eine Weile dauern bis dieses Szenario eine Option ist.
+Der Verkauf der App würde über einen Dritten erfolgen, da dem Projektteam die Erfahrung in dieser Hinsicht fehlt.
 \end{document}
