--- a/FIPLY/Dokumente/FIPLY Latex/bersenkowitsch_export.tex
+++ b/FIPLY/Dokumente/FIPLY Latex/bersenkowitsch_export.tex
@@ -37,8 +37,7 @@ Das Objekt \grqq{}reader\grqq{} öffnet einen Stream zu der erzielten Datei \grq
 		new FileReader(path + "file.csv"));
 	List myEntries = reader.readAll();
 \end{lstlisting}
-\ \\
-Das Objekt reader ist öffnet wieder einen Stream zu der erzielten Datei \grqq{}file.csv\grqq{}. Durch die Standardfunktion .readAll() werden alle Zeilen bis zum Ende der Datei in eine List gespeichert. Das Listenobjekt myEntries ist eine Liste bestehend aus eindimensionalen Arrays, wobei wieder jede Arraystelle sequentiell den Inhalt eines Spaltenfeldes in der CSV-Datei beschreibt.[\citetitle{exportCSVSourceRead} \cite{exportCSVSourceRead}] 
+Das Objekt \grqq{}reader\grqq{} ist öffnet wieder einen Stream zu der erzielten Datei \grqq{}file.csv\grqq{}. Durch die Standardfunktion .readAll() werden alle Zeilen bis zum Ende der Datei in eine List gespeichert. Das Listenobjekt myEntries ist eine Liste bestehend aus eindimensionalen Arrays, wobei wieder jede Arraystelle sequentiell den Inhalt eines Spaltenfeldes in der CSV-Datei beschreibt.[\citetitle{exportCSVSourceRead} \cite{exportCSVSourceRead}] 
 \ \\
 \ \\
 CSV-Datei schreiben:
