--- a/FIPLY/Dokumente/FIPLY Latex/irsiegler_User.tex
+++ b/FIPLY/Dokumente/FIPLY Latex/irsiegler_User.tex
@@ -21,7 +21,7 @@ Der Name wird in Plain Text eingegeben, während für das Geschlecht ein Spinner
 Weiters kann er sich hier über den Facebook-Login-Button mit seinem Facebook Account anmelden.
 \begin{figure}[H]
 	\begin{subfigure}[b]{0.3\textwidth}
-	\includegraphics[scale=0.55]{img/_step1}
+	\includegraphics[scale=0.55]{img/User_step1}
 	\end{subfigure}
 	\hfil
 	\caption{Der erste Schritt der Benutzererstellung.}
