--- a/FIPLY/Dokumente/FIPLY Latex/FIPLY_base.tex
+++ b/FIPLY/Dokumente/FIPLY Latex/FIPLY_base.tex
@@ -39,6 +39,7 @@
 \subfile{denkmayr_GitHub}
 \newpage
 \cfoot{Daniel Bersenkowitsch, Andreas Denkmayr \\\pagemark}
+\subfile{bersenkowitsch_photoshop}
 \subfile{bersenkowitsch_androidstudio}
 \subfile{denkmayr_intellij}
 \newpage
@@ -46,8 +47,8 @@
 \cfoot{Daniel Bersenkowitsch, Andreas Denkmayr, Gerald Irsiegler \\\pagemark}
 \subfile{irsiegler_latex}
 \subfile{bersenkowitsch_latex}
+\newpage
 \subfile{denkmayr_latex}
-\subfile{bersenkowitsch_photoshop}
 
 \newpage % KAPITEL PLANUNG
 \section{Planung}
@@ -125,6 +126,7 @@
 \cfoot{Daniel Bersenkowitsch \\\pagemark}
 \subfile{bersenkowitsch_Promotions} 
 
+\cfoot{\pagemark}
 \newpage
 \lstlistoflistings
 \newpage
