--- a/FIPLY/Dokumente/FIPLY Latex/denkmayr_Github.tex
+++ b/FIPLY/Dokumente/FIPLY Latex/denkmayr_Github.tex
@@ -78,7 +78,7 @@ Auf diese Weise werden parallele Entwicklungen ermöglicht. Beispielsweise kann 
 Gleichzeitig kann in einem Branch an größeren Änderungen, zum Beispiel an dem Wechsel auf eine alternative Technologie, gearbeitet werden.
 
 \subsubsection{Pull Request}
-Wurde eine Funktion eingebaut oder ein Bug gefixt, kann ein Entwickler die Änderungen seiner Branch in die master-Branch mittels einer Pull-Request übertragen. 
+Ein Entwickler kann die Änderungen in seiner Branch mittels einer Pull-Request in die master-Branch übertragen. 
 Ein Administrator des Repositories begutachtet die Änderungen und entscheidet dann, ob er diesen Code in die master-Branch übernehmen will.
 
 \subsubsection{Community}
@@ -149,5 +149,6 @@ Im Laufe der Arbeit stellte sich jedoch heraus, dass dieser Funktionsumfang nich
 Für diese Fälle ist die, bei GitHub Desktop beiliegende, Git Shell zu verwenden.
 Hier ist ein weitaus größerer Funktionsumfang gegeben.
 Dieser wird auch benötigt, wenn Probleme, wie komplexe Konflikte bei Commits oder Pull Requests, auftreten.
+Der Nachteil bei der Verwendung der Git Shell liegt darin, dass Erfahrung mit Kommandozeilen-Befehlen nötig ist, um effektives Arbeiten zu ermöglichen.
 
 \end{document}
